syntax= "proto3";

package images_storage_service;
option go_package = "images_storage_service/v1/protos";



message UploadImageRequest {
  string category = 1 [json_name = "category"]; 
  bytes image = 2 [json_name = "image"];
}

message StreamingUploadImageRequest {
    // Can be empty
    string category = 1 [json_name = "category"]; 
    bytes data = 2 [json_name = "data"];
}


message UploadImageResponce {
  string image_id = 1;
}

message GetImageResponce {
    bytes ImageData = 1 [json_name = "image_data"];
}

message ImageRequest {
  string category = 1;
  string image_id  = 2;
}

message ImageExistResponce {
  bool ImageExist = 1[json_name = "image_exist"];
}

message ReplaceImageRequest {
  string category = 1;
  string image_id  = 2;
  bytes ImageData = 3 [json_name = "image_data"];
  bool CreateIfNotExist = 4[json_name = "create_if_not_exist"];
}

message ReplaceImageResponce {
  // returns only if in request CreateIfNotExist(create_if_not_exist) = true,
  // otherwise this field will be empty
  string image_id = 1;
}